--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@
 /AutoCreateAnythings/JYM.AutoSystem/bin
 /AutoCreateAnythings/JYM.AutoSystem/obj
 /AutoCreateAnythings/.vs
+/AutoCreateAnythings/_ReSharper.Caches
